<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.smallrye</groupId>
        <artifactId>smallrye-graphql-server-parent</artifactId>
        <version>1.0.8</version>
    </parent>

    <artifactId>smallrye-graphql-runner</artifactId>
    <name>SmallRye: GraphQL Server :: Runner</name>
    <packaging>war</packaging>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <failOnMissingWebXml>false</failOnMissingWebXml>

    </properties>

    <dependencies>
        <!-- The implementation (We just use Servlet for now)-->
        <dependency>
            <groupId>io.smallrye</groupId>
            <artifactId>smallrye-graphql-servlet</artifactId>
        </dependency>
        
        <!-- The tests from out TCK -->
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>smallrye-graphql-tck</artifactId>
            <classifier>tests</classifier>
            <type>test-jar</type>
            <version>${project.version}</version>
        </dependency>
        <!-- The UI -->
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>smallrye-graphql-ui-graphiql</artifactId>
            <scope>runtime</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>

        <plugins>
            <!-- This will get the app part of the tck so that we can deploy it, ignoring all the test stuff -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.2</version>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>unpack</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.eclipse.microprofile.graphql</groupId>
                                    <artifactId>microprofile-graphql-tck</artifactId>
                                    <type>jar</type>
                                    <overWrite>true</overWrite>
                                    <outputDirectory>${project.build.directory}/classes</outputDirectory>
                                </artifactItem>
                            </artifactItems>
                            <excludes>**/tests/,**/dynamic/,**/*Test.class,**/beans.xml</excludes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
        
            <plugin>
                <groupId>org.wildfly.plugins</groupId>
                <artifactId>wildfly-maven-plugin</artifactId>
                <version>2.0.2.Final</version>    
                <configuration>
                    <version>${version.wildfly}</version> 
                    <server-config>standalone-full.xml</server-config>
                    <systemProperties>
                        <jboss.tx.node.id>1</jboss.tx.node.id>
                    </systemProperties>
                    <!-- So that you can log into localhost:9990 -->
                    <add-user>
                        <users>
                            <user>
                                <username>admin</username>
                                <password>admin</password>
                                <groups>
                                    <group>admin</group>
                                </groups>
                            </user>
                        </users>
                    </add-user>
                </configuration>
            </plugin>    
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>jdk11plus</id>
            <activation>
                <jdk>[11,)</jdk>
            </activation>
            <properties>
                <jboss.extra.opts>--add-modules java.se</jboss.extra.opts>
            </properties>
        </profile>
    </profiles>
</project>
